--- a/a-z-config.json
+++ b/a-z-config.json
@@ -1,6 +1,6 @@
 {
     "issuer": "https://stg-slepw-business.selise.biz",
-    "jwks_uri": "https://raw.githubusercontent.com/mdzzaman/dev-info/master/key.json",
+    "jwks_uri": "https://www.googleapis.com/oauth2/v3/certs",
     "authorization_endpoint": "https://stg-slepw-business.selise.biz/SlpwcBusinessService/IdentityServer/authorize",
     "token_endpoint": "https://stg-slepw-business.selise.biz/SlpwcBusinessService/IdentityServer/token",
     "userinfo_endpoint": "https://stg-slepw-business.selise.biz/SlpwcBusinessService/IdentityServer/userinfo",
