--- a/a-z-config.json
+++ b/a-z-config.json
@@ -1,14 +1,14 @@
 {
-    "issuer": "http://stg-slepw-business.selise.biz",
+    "issuer": "https://stg-slepw-business.selise.biz",
     "jwks_uri": "https://www.googleapis.com/oauth2/v3/certs",
-    "authorization_endpoint": "http://stg-slepw-business.selise.biz/connect/authorize",
-    "token_endpoint": "http://stg-slepw-business.selise.biz/connect/token",
-    "userinfo_endpoint": "http://stg-slepw-business.selise.biz/connect/userinfo",
-    "end_session_endpoint": "http://stg-slepw-business.selise.biz/connect/endsession",
-    "check_session_iframe": "http://stg-slepw-business.selise.biz/connect/checksession",
-    "revocation_endpoint": "http://stg-slepw-business.selise.biz/connect/revocation",
-    "introspection_endpoint": "http://stg-slepw-business.selise.biz/connect/introspect",
-    "device_authorization_endpoint": "http://stg-slepw-business.selise.biz/connect/deviceauthorization",
+    "authorization_endpoint": "https://stg-slepw-business.selise.biz/connect/authorize",
+    "token_endpoint": "https://stg-slepw-business.selise.biz/connect/token",
+    "userinfo_endpoint": "https://stg-slepw-business.selise.biz/connect/userinfo",
+    "end_session_endpoint": "https://stg-slepw-business.selise.biz/connect/endsession",
+    "check_session_iframe": "https://stg-slepw-business.selise.biz/connect/checksession",
+    "revocation_endpoint": "https://stg-slepw-business.selise.biz/connect/revocation",
+    "introspection_endpoint": "https://stg-slepw-business.selise.biz/connect/introspect",
+    "device_authorization_endpoint": "https://stg-slepw-business.selise.biz/connect/deviceauthorization",
     "frontchannel_logout_supported": true,
     "frontchannel_logout_session_supported": true,
     "backchannel_logout_supported": true,
